--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -1,7 +1,7 @@
 .text-input {
     border: 1px solid #cacccd;
-    height: 40px;
-    font-size: $font-size-large;
+    height: 45px;
+    font-size: 1.7rem;
     font-weight: 300;
     padding: $s-size;
     width: 100%;
